# health-data-service-spec

./: .gitignore  pyproject.toml  readme.md
src/health_data_service/: __init__.py  client.py  data_types.py  request_types.py  specific_types.py  types.py
