[project]
name = "health-data-service"
version = "0.1.0"
description = "Types and client library for the OpenHost health-data service"
requires-python = ">=3.11"
dependencies = [
    "attrs>=23.0",
    "cattrs>=24.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_data_service"]
